 * Enh #2811: Anonymous mode issues (auto login for anonymous users + other issues).
 * Fix #3069: Proxy server incorrectly caches output of 'View All Bugs'
 * Sec #3137: By default, every installation has an admin account with a known login cookie value. This value is now generated at installation time.
 * Fix #3177: Switching project in advanced summary changes current page.
 * Fix #3324: Win32: Call to undefined function: getmxrr() [default to OFF].
 * Fix #3400: Reopen a 'closed' bug, the value of 'resolution' is 'reopen' and can't be changed (now resolution / duplicate id can be edited)
 * Sec #3445: User see all information from all projects (if user has access to 0 projects)
 * Fix #3467: Delete user ends up at user not found error.
 * Fix #3475: Reopen bug to custom status possibility.
 * Fix #3479: Reset account preferences of a user results in reset administrators (current) account.
 * Fix #3493: Missing string $s_bug_deleted in German (and some other) translation
 * Fix #3495: Warning even if administrator account is disabled.
 * Fix #3501: No output for print_all_bug_page.php when status=closed, and Hide Status Closed is selected.
 * Fix #3506: PHP error if "duplicate id" refers to a bug that does not exist.
 * Fix #3525: Priority field incorrectly shown on Simple Report page.
 * Fix #3530: Custom fields definitions are not validated.
 * Opt #0000: Added an index on bug_id field in the mantis_bug_file_table.
 * Opt #0000: Removed filtering code redundancy in print report pages (thanks to Lincoln Maskey)
 * Updated copyright to include 2004

2003.12.08  -  0.18.0

 * Fix #3207: LDAP mail lookup was looking for the 'email' attribute instead of the 'mail' attribute.
 * Enh #3335: Added Estonian Language (thanks to Villem Vannas).
 * Fix #3310: Sorting of projects in menu bar.
 * Fix #3330: "Required" fields on Account Profile page.
 * Fix #3333: Support PHPMailer v1.7x.
 * Fix #3334: Invalid links in bug reminder emails.